# menix

./: CMakeLists.txt  README.markdown  main.cpp  menix.cpp  menix.h  menix.kdev4  menix.qrc  menix.rc  menix.ui  menixdebug.cpp  menixdebug.h  menixdebug.ui  menixprefs.cpp  menixprefs.h  menixprefs.ui  mingw.bat  opcionesglobales.cpp  opcionesglobales.h  server.cpp  server.h  smsat.cpp  smsat.h
cmake_modules/: Findqextserialport.cmake
